--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,11 @@
 theme: jekyll-theme-slate
+plugins:
+  - jekyll-relative-links
+relative_links:
+  enabled: true
+  collections: true
+include:
+  - <2nd>.md
+
+title: <FanY>
+description: <description of your webpage> 
